--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -8,20 +8,18 @@ tools:context=".FirstActivity"
 android:background="@color/colorPrimary">
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="6dp"
         android:layout_marginTop="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,6 +27,8 @@ android:background="@color/colorPrimary">
             android:layout_marginEnd="8dp"
             android:layout_marginStart="6dp"
             android:layout_marginTop="6dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
@@ -55,8 +55,8 @@ android:background="@color/colorPrimary">
                 <EditText
                     android:id="@+id/fullName"
                     android:layout_width="230dp"
-                    android:layout_height="35dp"
-                    android:layout_marginLeft="71dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="58dp"
                     android:drawableLeft="@drawable/name"
                     android:ems="10"
                     android:gravity="center"
@@ -75,7 +75,7 @@ android:background="@color/colorPrimary">
                 <EditText
                     android:id="@+id/address"
                     android:layout_width="230dp"
-                    android:layout_height="35dp"
+                    android:layout_height="40dp"
                     android:drawableLeft="@drawable/address"
                     android:ems="10"
                     android:gravity="center"
@@ -94,7 +94,7 @@ android:background="@color/colorPrimary">
                 <EditText
                     android:id="@+id/phoneNumber"
                     android:layout_width="230dp"
-                    android:layout_height="35dp"
+                    android:layout_height="40dp"
 
                     android:drawableLeft="@drawable/mobile"
                     android:ems="10"
@@ -114,7 +114,7 @@ android:background="@color/colorPrimary">
                 <EditText
                     android:id="@+id/email"
                     android:layout_width="230dp"
-                    android:layout_height="35dp"
+                    android:layout_height="40dp"
                     android:drawableLeft="@drawable/email"
                     android:ems="10"
                     android:gravity="center"
@@ -133,7 +133,7 @@ android:background="@color/colorPrimary">
                 <EditText
                     android:id="@+id/password"
                     android:layout_width="230dp"
-                    android:layout_height="35dp"
+                    android:layout_height="40dp"
                     android:drawableLeft="@drawable/password"
                     android:ems="10"
                     android:gravity="center"
@@ -170,5 +170,4 @@ android:background="@color/colorPrimary">
 
         </LinearLayout>
     </ScrollView>
-
 </android.support.constraint.ConstraintLayout>
